@@ -278,4 +278,6 @@ Relative latency matrix (name NUMALatency kind 5) between 8 NUMANodes (depth -3)
       5    22    22    16    16    16    10    22    16
       6    16    22    16    22    16    22    10    16
       7    22    16    16    22    22    16    16    10
+CPU kind #0 efficiency -1 cpuset 0x0000ffff,0xffffffff
+  FrequencyMaxMHz = 1700
 Topology not from this system
